--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_install:
   - node unitejs/cli/bin/unite generate --type=component --name=MyComponent --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=element --name=MyElement --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=enum --name=MyEnum --outputDirectory=./app
+  - node unitejs/cli/bin/unite generate --type=interface --name=MyInterface --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=pipeline-step --name=MyPipelineStep --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=value-converter --name=MyValueConverter --outputDirectory=./app
   - node unitejs/cli/bin/unite platform --operation=add --platformName=Cordova --outputDirectory=./app
@@ -48,6 +49,7 @@ script:
   - gulp e2e || travis_terminate 1
   - gulp build --buildConfiguration=prod || travis_terminate 1
   - gulp e2e || travis_terminate 1
+  - gulp doc-build || travis_terminate 1
   - gulp platform-web-package --buildConfiguration=prod || travis_terminate 1
   - gulp platform-electron-dev || travis_terminate 1
   - gulp platform-electron-package --buildConfiguration=prod || travis_terminate 1
